# csv2rdf-mcp

./: .env.example  .gitignore  README.md  compose.yaml  mcp.json
.github/workflows/: ci.yml
api/: pyproject.toml
api/src/csv2rdf_api/: __init__.py  main.py
api/tests/: test_main.py
data/togomcp/: README.md
data/togomcp/mie/: starrydata.yaml
data/togomcp/resources/: endpoints.csv
docs/: architecture.md  index.html
docs/architecture/: ai-assisted-step0-feedback.md  ai-assisted-step0-prompts.md  ai-assisted-step0-workflow.md  crucible-registration.md  design-rationale.md  linkml-vs-rdf-config.md  option-b.md  phase05-decisions.md  phase2-qudt.md  phase2-watcher.md  phase4-ui-architecture.md
docs/internal/: crucible-registration.md  decisions.md  design-plan.md  handoff-phase05.md  option-b-architecture.md  phase05-decisions.md
docs/ontology/: README.md  diagram.md  starrydata.ttl
docs/starrydata/ontology/: index.html  ontology.ttl
docs/starrydata/resource/: index.html
experiments/phase05/: README.md
experiments/phase05/morph-kgc/: README.md
experiments/phase05/oxigraph/: README.md  compose.yaml
experiments/phase05/scripts/: bench_oxigraph.py  bench_togopackage.py  csv_to_ttl.py  make_subset.py
experiments/phase05/togopackage/: README.md
experiments/phase05b/scripts/: bench_virtuoso.py
experiments/phase05b/togopackage-virtuoso/: README.md  compose.yaml
experiments/phase05b/togopackage-virtuoso/data/: config.yaml
experiments/phase1-smoke-test/: make_full_subset.py  run_representative_queries.py  test_compose_e2e.py  test_smoke.py
experiments/phase1-smoke-test/togomcp-data/docs/: MIE_file_specs.md  example1.md  example2.md  example3.md  make_intro.md  make_togomcp_usage_guide.md  togomcp-intro.html
experiments/phase1-smoke-test/togomcp-data/mie/: starrydata.yaml
experiments/phase1-smoke-test/togomcp-data/resources/: MIE_prompt.md  endpoints.csv  structured_query_insight.md  togomcp_usage_guide_v5.md
experiments/phase2-fullscale/: RESULTS.md  bench_queries.py  convert.py  load_full_default_graph.sh  run_oxigraph_bench.sh
experiments/phase3-linkml-vs-rdf-config/: .gitignore  README.md
experiments/phase3-linkml-vs-rdf-config/linkml/: starrydata.yaml
experiments/phase3-linkml-vs-rdf-config/rdf-config/config/starrydata/: endpoint.yaml  model.yaml  prefix.yaml
infra/togomcp/: Dockerfile  entrypoint.sh
infra/upload-api/: Dockerfile
ingest/: pyproject.toml
ingest/src/csv2rdf/: oxigraph_client.py  qudt.py  qudt_map.yaml  starrydata.py  watcher.py
ingest/tests/: test_oxigraph_client.py  test_qudt.py  test_samples_curves.py  test_starrydata.py  test_watcher.py
step0/: .gitignore  pyproject.toml
step0/dogfood/: starrydata-validate.md  starrydata.md
step0/src/csv2rdf_step0/: __init__.py  inspect.py  materialize.py  propose.py  refine.py  t1_ingester.py  ttl2mermaid.py  validate.py
step0/tests/: test_inspect.py  test_materialize.py  test_propose.py  test_refine.py  test_t1_ingester.py  test_ttl2mermaid.py  test_validate.py  test_validate_fixture.py
step0/tests/fixtures/starrydata_min/: curves.csv  diagram.md  ingester.py  mie.yaml  papers.csv  samples.csv  tbox.ttl
