[project]
name = "csv2rdf-api"
version = "0.1.0"
description = "Upload API + watcher driver for csv2rdf-mcp (Phase 2)"
requires-python = ">=3.11"
readme = "../README.md"
license = { text = "Apache-2.0" }
dependencies = [
    # csv2rdf-ingest is installed from sibling path; see README quickstart.
    "csv2rdf-ingest",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
csv2rdf-api = "csv2rdf_api.main:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csv2rdf_api"]

[tool.uv.sources]
csv2rdf-ingest = { path = "../ingest", editable = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
