# Skeleton only. Phase 1 で starrydata ingester を実装する。
# 中身は handoff §3.2 に従い Phase 0.5 では最小限に留める。

[project]
name = "csv2rdf-ingest"
version = "0.0.0"
description = "CSV -> RDF ingester for csv2rdf-mcp (placeholder, Phase 0.5)"
requires-python = ">=3.11"
readme = "../README.md"
license = { text = "Apache-2.0" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csv2rdf"]
