[project]
name = "csv2rdf-ingest"
version = "0.1.0"
description = "CSV -> RDF ingester for csv2rdf-mcp (Phase 1)"
requires-python = ">=3.11"
readme = "../README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "rdflib>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
csv2rdf-starrydata-papers = "csv2rdf.starrydata:_main"
csv2rdf-starrydata-samples = "csv2rdf.starrydata:_main_samples"
csv2rdf-starrydata-curves = "csv2rdf.starrydata:_main_curves"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csv2rdf"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
