[project]
name = "csv2rdf-ingest"
version = "0.1.0"
description = "CSV -> RDF ingester for csv2rdf-mcp (Phase 1)"
requires-python = ">=3.11"
readme = "../README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "rdflib>=7.0",
    "httpx>=0.27",
    "watchfiles>=0.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
csv2rdf-starrydata-papers = "csv2rdf.starrydata:_main"
csv2rdf-starrydata-samples = "csv2rdf.starrydata:_main_samples"
csv2rdf-starrydata-curves = "csv2rdf.starrydata:_main_curves"
csv2rdf-watcher = "csv2rdf.watcher:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csv2rdf"]
# Ship the curated QUDT map alongside the Python sources so importlib.resources
# can read it at runtime (incl. inside the docker images).
artifacts = ["src/csv2rdf/qudt_map.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.11"
